refactor ErrorDialog class